[package]
name = "assembly-lines"
version = "0.1.0"
authors = ["Zhiyuan Zheng"]
edition = "2018"

[dependencies]
anyhow = "1.0"
enum_dispatch = "0.3"
http = "0.2"
nom = "6.1"
reqwest = { version="0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
strum = { version = "0.20", features = ["derive"] }
thiserror = "1.0"