[package]
name = "workflows"
version = "0.1.0"
authors = ["Zhiyuan Zheng"]
edition = "2018"

[dependencies]
anyhow = "1.0"
atom_syndication = "0.9"
chrono = "0.4"
enum_dispatch = "0.3"
flate2 = "1.0"
# Lock funty's version as per https://github.com/bitvecto-rs/bitvec/issues/105
funty = "=1.1.0"
http = "0.2"
lazy_static = "1.4"
nom = "6.1"
reqwest = { version="0.11", features = ["blocking", "json"] }
rss = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
strum = { version = "0.20", features = ["derive"] }
tar = "0.4"
thiserror = "1.0"